Reduce middle column size by 32px to fix overflow around layout breakpoint
Fixes #31679

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2712,7 +2712,7 @@ a.account__display-name {
       flex-direction: column;
 
       @media screen and (min-width: $no-gap-breakpoint) {
-        max-width: 600px;
+        max-width: 568px;
       }
     }
   }
